# semester

./: Cargo.toml  README.md
semester/: Cargo.toml
semester-macro/: Cargo.toml  README.md
semester-macro/src/: lib.rs
semester/src/: lib.rs
semester/tests/: test.rs
